tests/type-error/pattern-matching/Overlapping2.vix
f True = 1
f False = 2
f v = 3
